# Buddlys-ESP-Prototyp

./: ARCHITECTURE.md  CLAUDE.md  README.md  finetune.mjs  latency-test.mjs  package-lock.json  runpod-setup.sh  sample_facts.txt
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  styles.css
cron/: Dockerfile  keep-warm.mjs
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  styles.css  supabase.ts
dashboard/src/lib/: cost.ts  format.ts  types.ts
dashboard/src/pages/: ConversationDetail.tsx  Conversations.tsx  Login.tsx  Overview.tsx
docs/: HA_ESP32_STATUS.md  OMNIVOICE_RUNPOD.md  RUNPOD_OMNIVOICE_QUICKSTART.md
firmware/: FLASH_GUIDE.md
firmware/appFirmware/: CMakeLists.txt  flash.sh  monitor.sh  partitions.csv  quickflash.sh  sdkconfig  sdkconfig.defaults
firmware/appFirmware/components/libfvad/: CMakeLists.txt
firmware/appFirmware/main/: CMakeLists.txt  afe_frontend.c  afe_frontend.h  ble_prov.c  ble_prov.h  board.c  idf_component.yml  main.c  nvs_config.c  settings.h
firmware/appFirmware/main/audio/: clip_ready.pcm  clip_reconnect.pcm  clip_waking.pcm
firmware/stableFirmware/: flash.sh  sdkconfig.defaults
firmware/stableFirmware/main/: CMakeLists.txt  main.c  nvs_config.h  settings.h
mobile/: app.json  metro.config.js  package-lock.json  package.json
mobile/.expo/: devices.json
mobile/.expo/prebuild/: cached-packages.json
mobile/.expo/types/: router.d.ts
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/app/: index.tsx
mobile/ios/: Podfile
mobile/scripts/: install-ios-release.sh
server/: .env.example  package-lock.json  package.json  probe_cadence.mjs  tsconfig.json
server/scripts/: gen_feedback_clips.mjs  ingest.ts  ingest_klexikon.ts
server/src/: analytics.ts  cartesiaTts.ts  chunker.ts  fillerCache.ts  index.ts  keepWarm.ts  mistralChat.ts  mistralStt.ts  mistralTts.ts  numberToWords.ts  omnivoiceTts.ts  rag.ts  reasoning.ts  supabase.ts  tools.ts  webSearch.ts
supabase/migrations/: 001_initial.sql  002_battery_level.sql  003_profiles_analytics.sql  004_dashboard_analytics.sql  005_conversation_delete.sql  006_rag_global_knowledge.sql
(+27 files in other folders)
